# toggl-cli

./: .gitignore  README.md  pyproject.toml
src/toggl_cli/: main.py  toggl_api.py
